I have made some changes, Product Color is selected through a combo box from another table

--- a/Factory/Factory/App.config
+++ b/Factory/Factory/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Factory.Properties.Settings.Factory_DataBaseConnectionString"
+            connectionString="Data Source=KAVOSIAN-PC10\SQL2K14;Initial Catalog=Factory_DataBase;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
