I have added new form to add product color

--- a/Factory/Factory/Factory.csproj
+++ b/Factory/Factory/Factory.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FRMProductColor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FRMProductColor.Designer.cs">
+      <DependentUpon>FRMProductColor.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FRMProductColor.resx">
+      <DependentUpon>FRMProductColor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
