--- a/Factory/Factory/Factory.csproj
+++ b/Factory/Factory/Factory.csproj
@@ -51,6 +51,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Factory_DataBaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Factory_DataBaseDataSet_UserType.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Factory_DataBaseDataSet_UserType.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +76,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserManagement.Designer.cs">
+      <DependentUpon>UserManagement.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,6 +101,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserManagement.resx">
+      <DependentUpon>UserManagement.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Factory_DataBaseDataSet.xsc">
       <DependentUpon>Factory_DataBaseDataSet.xsd</DependentUpon>
     </None>
@@ -100,6 +114,17 @@
     </None>
     <None Include="Factory_DataBaseDataSet.xss">
       <DependentUpon>Factory_DataBaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Factory_DataBaseDataSet_UserType.xsc">
+      <DependentUpon>Factory_DataBaseDataSet_UserType.xsd</DependentUpon>
+    </None>
+    <None Include="Factory_DataBaseDataSet_UserType.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Factory_DataBaseDataSet_UserType.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Factory_DataBaseDataSet_UserType.xss">
+      <DependentUpon>Factory_DataBaseDataSet_UserType.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
