I have added user privilage and sign out function

--- a/Factory/Factory/Factory.csproj
+++ b/Factory/Factory/Factory.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application_Definitaions.cs" />
     <Compile Include="Factory_DataBaseDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
